UI: first phase complete

--- a/src/Component/SidebarOption/sidebarOption.css
+++ b/src/Component/SidebarOption/sidebarOption.css
@@ -11,7 +11,11 @@
 
 .sidebarOption:hover,
 .sidebarOption:hover > p,
-.sidebarOption:hover > h3{
+.sidebarOption:hover > h3,
+.sidebarOption--active,
+.sidebarOption--active > p,
+.sidebarOption--active > h3
+{
     background-color: #fcecec;
     color: #c04b37;
     font-weight: 800 !important;
