UI + Routing: Working

--- a/src/Component/EmailList/EmailList.css
+++ b/src/Component/EmailList/EmailList.css
@@ -13,3 +13,13 @@
    z-index: 999;
    padding-right: 10px;
 }
+
+
+.emailList__sections{
+     display: flex;
+     position: sticky;
+     top: 0;
+     border-bottom: 1px solid whitesmoke;
+     background-color: white;
+     z-index: 999;
+}
